update the gallary

--- a/Gallary.html
+++ b/Gallary.html
@@ -223,7 +223,7 @@
 
         <!-- Gallery -->
         <li class="nav-item">
-          <a href="index.html" class="nav-link">
+          <a href="#" class="nav-link">
             <span class="material-symbols-rounded">photo_library</span>
             <span class="nav-label">Gallery</span>
           </a>
@@ -241,7 +241,7 @@
       <!-- Secondary Navigation -->
       <ul class="nav-list secondary-nav">
         <li class="nav-item">
-          <a href="https://wa.me/260XXXXXXXXX" target="_blank" class="nav-link">
+          <a href="https://wa.me/260766702923?text=Hello%20%20Barbershop%2C%20I%20would%20like%20to%20book%20a%20haircut" target="_blank" class="nav-link">
             <span class="material-symbols-rounded">chat</span>
             <span class="nav-label">WhatsApp</span>
           </a>
@@ -258,7 +258,9 @@
     <div class="home-page-gallery">
     <div class="home-content">
       <h1>Gallery/Portfolio</h1> <br>
-      <button class="Appointment">Make An Appointment</button>
+      <button class="Appointment"><a
+          href="https://wa.me/260766702923?text=Hello%20%20Barbershop%2C%20I%20would%20like%20to%20book%20a%20haircut">Make
+          An Appointment</a></button>
       
     </div>
 
