intruced icon on gallary

--- a/Gallary.html
+++ b/Gallary.html
@@ -111,6 +111,15 @@
       right: 30px;
     }
   </style>
+    <link rel="icon" type="image/jpeg" href="home-image.jpg">
+
+
+  <!-- Social Preview (Open Graph Meta Tags) -->
+  <meta property="og:title" content="TomTinaria Barbershop">
+  <meta property="og:description" content="Fresh cuts, modern styles – your trusted barbershop.">
+  <meta property="og:image" content="https://tomtinaribarbershop.com/home-image.jpg">
+  <meta property="og:url" content="https://tomtinaribarbershop.com">
+  <meta property="og:type" content="website">
 </head>
 <body>
    <!--loader-->
