--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TomTinaria Barbershop</title>
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <!-- Google Fonts for Icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" />
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-  </script>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/jpeg" href="home-image.jpg">
+
+
+  <!-- Social Preview (Open Graph Meta Tags) -->
+  <meta property="og:title" content="TomTinaria Barbershop">
+  <meta property="og:description" content="Fresh cuts, modern styles – your trusted barbershop.">
+  <meta property="og:image" content="https://tomtinaribarbershop.com/home-image.jpg">
+  <meta property="og:url" content="https://tomtinaribarbershop.com">
+  <meta property="og:type" content="website">
+
+  <!-- EmailJS -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 
 <body>
