--- a/Gallary.html
+++ b/Gallary.html
@@ -250,7 +250,7 @@
       <!-- Secondary Navigation -->
       <ul class="nav-list secondary-nav">
         <li class="nav-item">
-          <a href="https://wa.me/260766702923?text=Hello%20%20Barbershop%2C%20I%20would%20like%20to%20book%20a%20haircut" target="_blank" class="nav-link">
+          <a href="https://wa.me/260766702923?text=Hello%20TomTinaria%20Barbershop%2C%20I%20would%20like%20to%20book%20a%20haircut" target="_blank" class="nav-link">
             <span class="material-symbols-rounded">chat</span>
             <span class="nav-label">WhatsApp</span>
           </a>
@@ -333,8 +333,8 @@
     <div style="flex:1; min-width:220px;">
       <h3 style="margin-bottom:15px;">Contact</h3>
       <p><i class="fa-solid fa-phone"></i> +260 977 123 456</p>
-      <p><i class="fa-solid fa-envelope"></i> info@tomtinariabarber.com</p>
-      <p><i class="fa-solid fa-location-dot"></i> Plot 534, Martindale, Kitwe</p>
+      <p><i class="fa-solid fa-envelope"></i> tomtinariabarbershop.com</p>
+      <p><i class="fa-solid fa-location-dot"></i> Chamboli, Kitwe</p>
     </div>
     
     <!-- Social Media -->
