--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
       <h1>Welcome to TomTinaria Barbershop</h1>
       <p>Your Style, Our Passion.</p>
       <br>
-      <button class="Appointment"><a
-          href="https://wa.me/260766702923?text=Hello%20%20Barbershop%2C%20I%20would%20like%20to%20book%20a%20haircut">Make
+      <button class="Appointment"><a href="https://wa.me/260766702923?text=Hello%20TomTinaria%20Barbershop%2C%20I%20would%20like%20to%20book%20a%20haircut">Make
           An Appointment</a></button>
 
     </div>
