--- a/Gallary.html
+++ b/Gallary.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- Google Fonts for Icons -->
   <title>Gallery - TomTinaria Barbershop</title>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
   <style>
     .gallery-header {
       text-align: center;
@@ -122,6 +124,38 @@
   <meta property="og:type" content="website">
 </head>
 <body>
+  <a href="https://wa.me/260766702923?text=Hello%20TomTinaria%20Barbershop" 
+   target="_blank" 
+   class="whatsapp-float">
+   <i class='bx bxl-whatsapp'></i>
+</a>
+<!-- whatsap image -->
+ <style>
+  .whatsapp-float {
+    position: fixed;       /* stays in place while scrolling */
+    bottom: 20px;          /* distance from bottom */
+    right: 20px;           /* distance from right */
+    z-index: 1000;         /* above other elements */
+    background-color: #25D366;  /* WhatsApp green */
+    color: white;
+    border-radius: 50%;    /* circle button */
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+    font-size: 30px;       /* icon size */
+    transition: transform 0.3s;
+}
+
+.whatsapp-float:hover {
+    transform: scale(1.1); /* small bounce effect */
+    cursor: pointer;
+}
+
+ </style>
+ 
    <!--loader-->
   <div id="loader">
     <div class="pulse"></div>
